@@ -22,18 +22,3 @@ java {
 dependencies {
     api(project(":maddi-support"))
 }
-tasks.withType<JavaCompile> {
-    options.compilerArgs.addAll(listOf(
-        "-Xplugin:ScanBuild ${layout.buildDirectory.get()}/config.json"
-    ))
-    options.annotationProcessorPath = configurations.annotationProcessor.get() +
-            files("/Users/bnaudts/git/maddi/maddi-run-scanbuild.jar")
-    options.compilerArgs.addAll(listOf(
-        "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
-    ))
-}
